--- a/style.css
+++ b/style.css
@@ -37,16 +37,22 @@ input{
     outline: none;
 }
 
-button{
+.btn{
 background-color:#36383d ;
 width: 20%;
 cursor: pointer;
-transition: 0.3s;
-}
+background: #1C1A1C;
+    cursor: pointer;
+    transition: all 450ms ease-in-out;
+    width: 20%;}
 
-button:hover{
-    background-color:#4a4b4d ;
-}
+.btn:hover{
+    background: linear-gradient(0deg,#A47CF3,#683FEA);
+    box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4),
+    inset 0px -4px 0px 0px rgba(0, 0, 0, 0.2),
+    0px 0px 0px 4px rgba(255, 255, 255, 0.2),
+    0px 0px 180px 0px #9917FF;
+    transform: translateY(-2px);}
 .images{
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -63,3 +69,54 @@ button:hover{
 .images div img{
     width: 100%;
 }
+
+.txt{
+    color: white;
+    font-size: 15px;
+}
+
+  
+  .sparkle {
+    fill: #AAAAAA;
+    transition: all 800ms ease;
+  }
+  
+  .text {
+    font-weight: 600;
+    color: #AAAAAA;
+    font-size: medium;
+  }
+  
+
+  
+  .btn:hover .text {
+    color: white;
+  }
+  
+  .btn:hover .sparkle {
+    fill: white;
+    transform: scale(1.2);
+  } 
+
+
+  header{
+    display: inline;
+    align-items: end;
+    justify-content: end;
+    width: 100%;
+    height: 0;
+    
+  }
+  .logo{
+    width: 150px;
+    height: 150px;
+    margin-top: -50px;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+  }
+  .logo:hover {
+    transform: translate(10px); /* Adjust the amount of movement as needed */
+}
+  
+  
+  
